--- a/src/main/resources/static/css/styleLogin.css
+++ b/src/main/resources/static/css/styleLogin.css
@@ -106,3 +106,25 @@ body {
 .box input[type="submit"]:hover {
     background: #2ecc71;
 }
+
+.box button[name="cancel"] {
+    border: 0;
+    background: none;
+    display: block;
+    margin: 20px auto;
+    text-align: center;
+    border: 2px solid #e00808;
+    padding: 14px 40px;
+    outline: none;
+    color: white;
+    border-radius: 24px;
+    transition: 0.25s;
+    cursor: pointer;
+}
+
+.box button[name="cancel"]:hover {
+    background: #e00808;
+}
+.box a{
+    color: #ffffff;
+}
