--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,22 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title></title>
+</head>
+
 <head>
     <meta charset="UTF-8">
-    <title>home</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Menu</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="css/styleMenu.css"/>
 </head>
+
 <body>
-<h1>Home</h1>
-<hr>
-<form th:action="@{/telegram-page}" method="get">
-    <input type="submit" value="Telegram"/>
-</form>
-<br>
-<form th:action="@{/login}" method="get">
-    <input type="submit" value="Login"/>
-</form>
-<h1 th:inline="text">Hello [[${#httpServletRequest.remoteUser}]]!</h1>
-<form th:action="@{/logout}" method="post">
-    <input type="submit" value="Sign Out"/>
-</form>
+
+<header>
+    <img class="logo" alt="logo" src="images/education-icon-3.jpg" width="50"/>
+    <nav>
+        <ul class="nav_links">
+            <li><a href="/telegram-page"> Telegram </a></li>
+            <li><a href="#"> User </a></li>
+            <li><a href="/login"> Login </a></li>
+            <li>
+                <form th:action="@{/logout}" method="post">
+                    <button name="logout"><a type="submit">Logout</a></button>
+                </form>
+            </li>
+            <li><a href="/"> Home </a></li>
+        </ul>
+    </nav>
+    <a th:inline="text" class="out_user_name">
+        <output name="name"> Hello [[${#httpServletRequest.remoteUser}]]!</output>
+    </a>
+
+    <form action="#" method="GET">
+        <a class="cta" href="#"> </a>
+        <button name="other" type="submit"> Send</button>
+    </form>
+
+</header>
 </body>
 </html>
