--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,24 +1,35 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
-      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
-<head>
-    <title>Spring Security Example </title>
-</head>
-<body>
-<div th:if="${param.error}">
-    Invalid username and password.
-</div>
-<div th:if="${param.logout}">
-    You have been logged out.
-</div>
-<form th:action="@{/login}" method="post">
-    <div><label> User Name : <input type="text" name="username"/> </label></div>
-    <div><label> Password: <input type="password" name="password"/> </label></div>
-    <div><input type="submit" value="Sign In"/></div>
-</form>
-<form th:action="@{/}" method="get">
-    <input type="submit" value="Home"/>
-</form>
+<html lang="en">
+   <head>
+   		<meta charset="UTF-8">
+      	<title>Login</title>
+      	<meta name="description" content="">
+      	<meta name="viewport" content="width=device-width, initial-scale=1">
+      	<link rel="stylesheet"  type="text/css" href="css/styleLogin.css" />
+   </head>
 
-</body>
+   <body>
+	<div class="box">
+		<form  th:action="@{/login}" method="post" >
+			<h1>Login</h1>
+			<input placeholder="user name" type="text" autocomplete="off" name="username" />
+			<input placeholder="password" type="password" name="password"  />
+			<input type="submit" value="Login" />
+		</form>
+		<button name="cancel"><a href="/">Cancel</a></button>
+	</div>
+
+
+<!--          <input type="hidden" name="redirectId" value="Home"/>-->
+<!--                  <a href="/">Cancel</a>-->
+
+
+	  <div th:if="${param.error}">
+		  Invalid username and password.
+	  </div>
+	  <div th:if="${param.logout}">
+		  You have been logged out.
+	  </div>
+
+   </body>
 </html>
