--- a/src/main/resources/templates/error/403.html
+++ b/src/main/resources/templates/error/403.html
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Telegrem place</title>
+    <title>403</title>
     <link rel="stylesheet" type="text/css" href="css/styleBox.css"/>
+    <link rel="stylesheet" type="text/css" href="css/403.css"/>
 </head>
 <body>
 
+
 <div class="box">
-    <h1>Telegram Manager</h1>
+    <h1>Error 403</h1>
+    <h1 name="error">Access denied</h1>
     <br>
-    <form th:action="@{/telegram/send}" method="get">
-        <input name="sendReport" type="submit" value="Send Message"/>
-    </form>
     <button name="cancel"><a href="/">Cancel</a></button>
 </div>
 
