--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -5,7 +5,7 @@
       	<title>Login</title>
       	<meta name="description" content="">
       	<meta name="viewport" content="width=device-width, initial-scale=1">
-      	<link rel="stylesheet"  type="text/css" href="css/styleLogin.css" />
+      	<link rel="stylesheet"  type="text/css" href="css/styleBox.css" />
    </head>
 
    <body>
