--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -2,20 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Telegrem place</title>
+    <title>404</title>
+    <link rel="stylesheet" type="text/css" href="css/404.css"/>
     <link rel="stylesheet" type="text/css" href="css/styleBox.css"/>
 </head>
 <body>
-
 <div class="box">
-    <h1>Telegram Manager</h1>
+    <h1>Error 404</h1>
+
     <br>
-    <form th:action="@{/telegram/send}" method="get">
-        <input name="sendReport" type="submit" value="Send Message"/>
-    </form>
     <button name="cancel"><a href="/">Cancel</a></button>
 </div>
-
-
 </body>
 </html>
