--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,6 +13,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/styleMenu.css"/>
+
 </head>
 
 <body>
@@ -22,11 +23,12 @@
     <nav>
         <ul class="nav_links">
             <li><a href="/telegram-page"> Telegram </a></li>
-            <li><a href="#"> User </a></li>
-            <li><a href="/login"> Login </a></li>
+            <li><a href="/user"> User </a></li>
+            <li><a href="/login"> Sign in </a></li>
+            <li><a href="/registration"> Sign up </a></li>
             <li>
                 <form th:action="@{/logout}" method="post">
-                    <button name="logout"><a type="submit">Logout</a></button>
+                    <button name="logout"><a type="submit">Sign out</a></button>
                 </form>
             </li>
             <li><a href="/"> Home </a></li>
@@ -35,11 +37,6 @@
     <a th:inline="text" class="out_user_name">
         <output name="name"> Hello [[${#httpServletRequest.remoteUser}]]!</output>
     </a>
-
-    <form action="#" method="GET">
-        <a class="cta" href="#"> </a>
-        <button name="other" type="submit"> Send</button>
-    </form>
 
 </header>
 </body>
