--- a/src/main/resources/templates/auth/registration.html
+++ b/src/main/resources/templates/auth/registration.html
@@ -8,7 +8,8 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/styleBox.css"/>
-<!--    <link rel="stylesheet" type="text/css" href="css/styleMenu.css"/>-->
+    <link rel="shortcut icon" href="images/icon.jpg" type="image/jpg">
+
 </head>
 <body>
 <div th:if="${message}"></div>
