--- a/src/main/resources/templates/error/error.html
+++ b/src/main/resources/templates/error/error.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Error</title>
+    <link rel="shortcut icon" href="images/icon.jpg" type="image/jpg">
 </head>
 <body>
 error
