--- a/src/main/resources/templates/telegram-page.html
+++ b/src/main/resources/templates/telegram-page.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Telegrem place</title>
     <link rel="stylesheet" type="text/css" href="css/styleBox.css"/>
+    <link rel="shortcut icon" href="images/icon.jpg" type="image/jpg">
+
 </head>
 <body>
 
