--- a/src/main/resources/templates/auth/success.html
+++ b/src/main/resources/templates/auth/success.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Success</title>
     <link rel="stylesheet" type="text/css" href="css/styleBox.css"/>
+    <link rel="shortcut icon" href="images/icon.jpg" type="image/jpg">
 
 </head>
 <body>
