--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,15 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
-</head>
+    <title>Home</title>
+    <link rel="shortcut icon" href="images/icon.jpg" type="image/jpg">
 
-<head>
-    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Menu</title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/styleMenu.css"/>
 
 </head>
