--- a/src/main/resources/templates/user-page.html
+++ b/src/main/resources/templates/user-page.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>User</title>
-        <link rel="stylesheet" type="text/css" href="css/styleBox.css"/>
+    <link rel="stylesheet" type="text/css" href="css/styleBox.css"/>
+    <link rel="shortcut icon" href="images/icon.jpg" type="image/jpg">
+
 </head>
 <body>
 <div class="box">
