--- a/src/main/resources/templates/error/error.html
+++ b/src/main/resources/templates/error/error.html
@@ -7,5 +7,11 @@
 </head>
 <body>
 error
+<button type="button" onclick="cancelForm()" class="btn btn-secondary m-2">Home</button>
+<script type="text/javascript">
+    function cancelForm() {
+        window.location = "[[@{/}]]"
+    }
+</script>
 </body>
 </html>
