--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,6 +10,7 @@
     <meta name="description" content="">
     <link rel="stylesheet" type="text/css" href="css/styleMenu.css"/>
 
+
 </head>
 
 <body>
@@ -18,8 +19,10 @@
     <img class="logo" alt="logo" src="images/education-icon-3.jpg" width="50"/>
     <nav>
         <ul class="nav_links">
-            <li><a href="/telegram-page"> Telegram </a></li>
-            <li><a href="/user"> User </a></li>
+            <li><a href="/tasks"> Tasks </a></li>
+            <li><a href="/telegram"> Telegram </a></li>
+            <li><a href="/users"> Users </a></li>
+            <li><a href="/user"> My page </a></li>
             <li><a href="/login"> Sign in </a></li>
             <li><a href="/registration"> Sign up </a></li>
             <li>
@@ -35,5 +38,12 @@
     </a>
 
 </header>
+
+<div class="box">
+    <h1>APP</h1>
+    <br>
+</div>
+
+
 </body>
 </html>
