--- a/src/main/resources/templates/auth/registration.html
+++ b/src/main/resources/templates/auth/registration.html
@@ -15,14 +15,17 @@
 <div th:if="${message}"></div>
 <div class="box">
     <form th:action="@{/registration}" method="post">
+
         <h1>Registration</h1>
-        <input placeholder="first_name" type="text" autocomplete="off" name="firstName"/>
-        <input placeholder="last_name" type="text" autocomplete="off" name="lastName"/>
+        <input placeholder="first name" type="text" autocomplete="off" name="firstName"/>
+        <input placeholder="last name" type="text" autocomplete="off" name="lastName"/>
         <input placeholder="email" type="text" autocomplete="off" name="email"/>
         <input placeholder="password" type="password" name="password"/>
+        <input placeholder="chat id" type="text" autocomplete="off" name="chatId"/>
         <input type="submit" value="Registration"/>
     </form>
-    <button name="cancel"><a href="/">Cancel</a></button>
+    <button type="button" onclick="cancelForm()" name="cancel">Home</button>
+
 </div>
 <div th:if="${param.error}">
     Invalid username and password.
@@ -30,5 +33,10 @@
 <div th:if="${param.logout}">
     You have been logged out.
 </div>
+<script type="text/javascript">
+    function cancelForm() {
+        window.location = "[[@{/}]]"
+    }
+</script>
 </body>
 </html>
