--- a/src/main/resources/templates/user/user_form.html
+++ b/src/main/resources/templates/user/user_form.html
@@ -65,8 +65,7 @@
                 <div class="col-sm-8">
                     <div class="form-check form-check-inline">
                         <input th:field="*{status}" class="form-check-input" type="radio" value="ACTIVE" name="status"
-                               id="statusActive"
-                               checked>
+                               id="statusActive" checked>
                         <label class="form-check-label" for="statusActive">
                             Active
                         </label>
