added user validation, changed error page

--- a/src/main/resources/templates/error/403.html
+++ b/src/main/resources/templates/error/403.html
@@ -14,7 +14,7 @@
     <h1>Error 403</h1>
     <h1 name="error">Access denied</h1>
     <br>
-    <button type="button" onclick="cancelForm()" class="btn btn-secondary m-2">Home</button>
+    <button type="button" name="cancel" onclick="cancelForm()" class="btn btn-secondary m-2">Home</button>
 
 </div>
 <script type="text/javascript">
