--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -12,7 +12,7 @@
     <h1>Error 404</h1>
 
     <br>
-    <button type="button" onclick="cancelForm()" class="btn btn-secondary m-2">Home</button>
+    <button type="button" name="cancel" onclick="cancelForm()" class="btn btn-secondary m-2">Home</button>
 
 </div>
 
