--- a/src/main/resources/templates/user/user_form.html
+++ b/src/main/resources/templates/user/user_form.html
@@ -2,22 +2,23 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>[[${pageTitle}]]</title>
+    <title>Form</title>
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
     <link rel="shortcut icon" href="images/icon.jpg" type="image/jpg">
 </head>
 <body style="background: beige">
 <div class="container-fluid ">
-    <div class="text-center"><h2>[[${pageTitle}]]</h2></div>
+    <div class="text-center"><h2>User</h2></div>
     <form th:action="@{/users}" method="post" th:object="${user}"
           style="max-width: 500px; margin: auto;background: whitesmoke">
-        <input type="hidden" th:field="*{id}" />
+        <input type="hidden" th:field="*{id}"/>
         <div class="border border-secondary rounded-3">
             <div class="form-group row m-3">
                 <label class="col-sm-4 col-form-label text-center">E-mail:</label>
                 <div class="col-sm-8">
                     <input type="email" placeholder="email" name="email" class="form-control"
                            th:field="*{email}"/>
+                    <div style="color: red" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email error</div>
                 </div>
             </div>
             <div class="form-group row m-3">
@@ -25,13 +26,21 @@
                 <div class="col-sm-8">
                     <input type="text" placeholder="First name" name="firstName" class="form-control"
                            th:field="*{firstName}"/>
+                    <div style="color: red" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">First
+                        name error
+                    </div>
+
                 </div>
             </div>
             <div class="form-group row m-3">
                 <label class="col-sm-4 col-form-label text-center">Last name:</label>
                 <div class="col-sm-8">
-                    <input type="text" placeholder="Last name" name="lastName" class="form-control"
+                    <input type="text" placeholder="Last name" name="lastName" id="lastName" class="form-control"
                            th:field="*{lastName}"/>
+                    <div style="color: red" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">Last name
+                        error
+                    </div>
+
                 </div>
             </div>
             <div class="form-group row m-3">
@@ -39,6 +48,10 @@
                 <div class="col-sm-8">
                     <input type="password" placeholder="Password" name="password" class="form-control"
                            th:field="*{password}"/>
+                    <div style="color: red" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Password
+                        error
+                    </div>
+
                 </div>
             </div>
             <div class="form-group row m-3">
@@ -57,6 +70,9 @@
                         <label class="form-check-label" for="roleAdmin">
                             Admin
                         </label>
+                    </div>
+                    <div style="color: red" th:if="${#fields.hasErrors('role')}" th:errors="*{role}">
+                        Role error
                     </div>
                 </div>
             </div>
@@ -77,6 +93,9 @@
                             Banned
                         </label>
                     </div>
+                    <div style="color: red" th:if="${#fields.hasErrors('status')}" th:errors="*{status}">
+                        Status error
+                    </div>
                 </div>
             </div>
             <div class="form-group row m-3">
@@ -84,14 +103,18 @@
                 <div class="col-sm-8">
                     <input type="text" placeholder="Chat id" name="chatId" class="form-control"
                            th:field="*{chatId}"/>
+                    <div style="color: red" th:if="${#fields.hasErrors('chatId')}" th:errors="*{chatId}">Chat id error
+                    </div>
+
                 </div>
             </div>
             <div class="form-group row m-3">
                 <label class="col-sm-4 col-form-label text-center">Tasks :</label>
                 <div class="col-sm-8">
-                    <select  th:field="*{tasks}"  name="tasks" class="form-select" multiple aria-label="multiple select example">
+                    <select th:field="*{tasks}" name="tasks" class="form-select" multiple
+                            aria-label="multiple select example">
                         <th:block th:each="task : ${tasks}">
-                            <option  th:value="${task.id}">[[${task.nameTask}]] </option>
+                            <option th:value="${task.id}">[[${task.nameTask}]]</option>
                         </th:block>
                     </select>
                 </div>
