--- a/src/main/resources/templates/task/task_form.html
+++ b/src/main/resources/templates/task/task_form.html
@@ -2,13 +2,13 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>[[${pageTitle}]]</title>
+    <title>Form</title>
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
     <link rel="shortcut icon" href="images/icon.jpg" type="image/jpg">
 </head>
 <body style="background: beige">
 <div class="container-fluid ">
-    <div class="text-center"><h2>[[${pageTitle}]]</h2></div>
+    <div class="text-center"><h2>Task</h2></div>
     <form th:action="@{/tasks}" method="post" th:object="${task}"
           style="max-width: 500px; margin: auto;background: whitesmoke">
         <input type="hidden" th:field="*{id}"/>
@@ -18,7 +18,8 @@
                 <div class="col-sm-8">
                     <input type="text" placeholder="Name Task" name="nameTask" class="form-control"
                            th:field="*{nameTask}"/>
-                </div>
+                    <div style="color: red" th:if="${#fields.hasErrors('nameTask')}" th:errors="*{nameTask}">
+                    </div>
             </div>
             <div class="form-group row m-3">
                 <label class="col-sm-4 col-form-label text-center">Description :</label>
@@ -27,7 +28,8 @@
                               name="descriptionTask"
                               class="form-control"
                               id="descriptionTask" rows="3"></textarea>
-                </div>
+                    <div style="color: red" th:if="${#fields.hasErrors('descriptionTask')}" th:errors="*{descriptionTask}">
+                    </div>
             </div>
             <div class="form-group row m-3">
                 <label class="col-sm-4 col-form-label text-center">Users :</label>
