--- a/src/main/resources/templates/error/error.html
+++ b/src/main/resources/templates/error/error.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Error</title>
-    <link rel="stylesheet" type="text/css" href="css/error.css"/>
-    <link rel="stylesheet" type="text/css" href="css/styleBox.css"/>
-    <link rel="shortcut icon" href="images/icon.jpg" type="image/jpg">
+    <link rel="stylesheet" type="text/css" href="/css/error.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/styleBox.css"/>
+    <link rel="shortcut icon" href="/images/icon.jpg" type="image/jpg">
 </head>
 <body>
 <div class="box" style="top: 20%;left: 50%;" >
