--- a/src/main/resources/templates/telegram-page.html
+++ b/src/main/resources/templates/telegram-page.html
@@ -5,7 +5,7 @@
     <title>Telegram place</title>
     <base href="/">
     <link rel="stylesheet" type="text/css" th:href="@{css/styleBox.css}"/>
-    <link rel="shortcut icon" href="images/icon.jpg" type="image/jpg">
+    <link rel="shortcut icon" href="/images/icon.jpg" type="image/jpg">
 
 </head>
 <body>
