--- a/src/main/resources/templates/user/user-page.html
+++ b/src/main/resources/templates/user/user-page.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>User</title>
-    <link rel="stylesheet" type="text/css" href="css/styleBox.css"/>
-    <link rel="shortcut icon" href="images/icon.jpg" type="image/jpg">
+    <link rel="stylesheet" type="text/css" href="/css/styleBox.css"/>
+    <link rel="shortcut icon" href="/images/icon.jpg" type="image/jpg">
 
 </head>
 <body>
