--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -5,8 +5,8 @@
     <title>Login</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="css/styleBox.css"/>
-    <link rel="shortcut icon" href="images/icon.jpg" type="image/jpg">
+    <link rel="stylesheet" type="text/css" href="/css/styleBox.css"/>
+    <link rel="shortcut icon" href="/images/icon.jpg" type="image/jpg">
 
 </head>
 
