--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>404</title>
-    <link rel="stylesheet" type="text/css" href="css/404.css"/>
-    <link rel="stylesheet" type="text/css" href="css/styleBox.css"/>
-    <link rel="shortcut icon" href="images/icon.jpg" type="image/jpg">
+    <link rel="stylesheet" type="text/css" href="/css/404.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/styleBox.css"/>
+    <link rel="shortcut icon" href="/images/icon.jpg" type="image/jpg">
 </head>
 <body>
 <div class="box">
