--- a/src/main/resources/templates/user/user_form.html
+++ b/src/main/resources/templates/user/user_form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Form</title>
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
-    <link rel="shortcut icon" href="images/icon.jpg" type="image/jpg">
+    <link rel="shortcut icon" href="/images/icon.jpg" type="image/jpg">
 </head>
 <body style="background: beige">
 <div class="container-fluid ">
