--- a/src/main/resources/static/css/styleMenu.css
+++ b/src/main/resources/static/css/styleMenu.css
@@ -50,7 +50,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: "Montserrat", sans-serif;
-    background: url('../images/web-background.jpg') 0 0 no-repeat;
+    background: url('../images/image.jpg') 0 0 no-repeat;
     background-size: 100% 100%;
 }
 
@@ -94,7 +94,7 @@ header {
 }
 
 .block {
-     background-image: url('../images/web-background.jpg');
+     background-image: url('../images/image.jpg');
 }
 
 .nav_links {
